syntax = "proto3";

option go_package = "./;protos";
package encryption;

// 发送客户端RSAPublickKey以及DH PublicKey
message ExchangeKey {
  message Request {
    // 临时AES秘钥
    string tempAESKey = 1;
    // 客户端公钥签名
    string RSASign = 2;
    // Client RSA PublicKey
    string RSAPublicKey = 3;
    // Client DH Public Key
    string DHPublicKey = 4;
  }
  message Response {
    // 用户凭证秘钥
    string userAESKey = 1;
    // 客户端公钥签名
    string RSASign = 2;
    // Romote DH Public Key
    string DHPublicKey = 3;
    int64 deadline = 4;
  }
}

message GetRsaPublicKeyType {
  message Resquest {
    // 服务端RSA公钥
    string publicKey = 1;
    // 服务端RSA公钥校验签名
    string sign = 2;
  }
  message Response {
    // 服务端RSA公钥
    string publicKey = 1;
    // 服务端RSA公钥校验签名
    string sign = 2;
  }
}

message PostClientRsaPublicKeAndGenerateDhKeyType {
  message Response {
    // AES秘钥随机KEY字符串
    string randomKey = 1;
    // DH算法相关参数
    message DhKeyType {
      // 素数
      string prime = 1;
      // 底数
      string base = 2;
      // 分享key
      string sharePublicKey = 3;
    }
    DhKeyType dhKey = 2;
  }
}

// 无需返数据
message GetAesKeyType {
  message Response { string key = 1; }
}